validate in basic test WServerTest